# SoftEtherVPN

./: .appveyor.yml  .azure-pipelines.yml  .cirrus.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  0001-regionunlock.patch  413.patch  ANTIVIRUS.md  AUTHORS.TXT  BUILD_UNIX.TXT  BUILD_WINDOWS.TXT  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  ChangeLog  ContainerREADME.md  DISCLAIMER.md  Dockerfile  FUNDING.yml  LICENSE  LICENSE.TXT  Makefile.am  README  README.TXT  README.md  SECURITY.gmd  SECURITY.gml  SECURITY.md  THIRD_PARTY.TXT  TRANSLATION_GUIDE.md  TURKISH_TRANSLATION.md  Tao là lê mạnh hùng 1996  WARNING.TXT  WINDOWS_README.txt  azure-pipelines.yml  configure  configure.ac  (+11 more)
src/: BUILD_UNIX.md  BUILD_WINDOWS.TXT  BUILD_WINDOWS.md  BUILD_WINDOWS_ARM64.md  BUILD_WinArm64.md  BuildAll.cmd  CMakeLists.txt  ChangeLog.txt  CurrentBuild.txt  GlobalConst.h  LICENSE.TXT  Makefile.am  Makefile64  README.TXT  SEVPN.sln  THIRD_PARTY.TXT  WARNING.TXT  configure
src/BuildFiles/Manifests/: common.manifest  x64_admin.manifest  x64_user.manifest  x86_admin.manifest  x86_user.manifest
src/BuildFiles/OcxCabInf/: vpnweb.inf
src/BuildFiles/Utility/: cabarc_redist.txt
src/BuildFiles/VerScript/: ver.rc  ver_vg.rc
src/BuildUtil/: BuildUtil.csproj  BuildUtilCommands.cs  BuildUtilMain.cs  CodeSign.cs  CopyBuildUtil.cmd  PEUtil.cs  Test.cs  UnixBuildSoftwares.cs  VpnBuilder.cs  VpnBuilderConfig.cs  VpnBuilderConfigTypes.cs  Win32BuildSoftware.cs  Win32BuildUtil.cs  app.config
src/BuildUtil/CoreUtil/: Bmp.cs  Buf.cs  Cache.cs  Compress.cs  Console.cs  Csv.cs  Env.cs  FileIO.cs  GZip.cs  Kernel.cs  MultiLang.cs  Packer.cs  RC4.cs  ReadIni.cs  Reg.cs  Secure.cs  Stb.cs  Str.cs  Tar.cs  Thread.cs  Time.cs  Util.cs  Win32.cs  ZLib.cs  Zip.cs
src/BuildUtil/Properties/: AssemblyInfo.cs  (+4 more)
src/Cedar/: Account.c  Account.h  Admin.c  Admin.h  AzureClient.c  AzureClient.h  AzureServer.c  AzureServer.h  Bridge.c  Bridge.h  BridgeUnix.c  BridgeUnix.h  BridgeWin32.c  BridgeWin32.h  CM.c  CM.h  CMInner.h  CMakeLists.txt  Cedar.c  Cedar.h  Cedar.vcproj  CedarPch.c  CedarPch.h  CedarType.h  Client.c  Client.h  Command.c  Command.h  Connection.c  Connection.h  Console.c  Console.h  DDNS.c  DDNS.h  Database.c  Database.h  EM.c  EM.h  EMInner.h  EtherLog.c  (+120 more)
src/Ham/: Ham.rc  Ham.vcproj  generated_manual_cn.html  generated_manual_ja.html
src/Mayaqua/: CMakeLists.txt  Cfg.c  Cfg.h  DNS.c  DNS.h  Encoding.c  Encoding.h  Encrypt.c  Encrypt.h  FileIO.c  FileIO.h  HTTP.c  HTTP.h  Internat.c  Internat.h  Kernel.c  Kernel.h  Makefile.am  MayaType.h  Mayaqua.c  Mayaqua.h  Mayaqua.vcproj  Memory.c  Memory.h  Microsoft.c  Microsoft.h  Network.c  Network.h  OS.c  OS.h  Object.c  Object.h  Pack.c  Pack.h  Proxy.c  Proxy.h  Queue.c  Queue.h  Secure.c  Secure.h  (+29 more)
src/Neo/: NDIS5.c  NDIS5.h  Neo.c  Neo.h  Neo.rc  Neo.vcproj  resource.h
src/Neo6/: NDIS6.c  NDIS6.h  Neo6.c  Neo6.h  Neo6.vcproj  Neo6.vcxproj  resource.h
src/PenCore/: CMakeLists.txt  PenCore.c  PenCore.def  PenCore.rc  PenCore.vcproj  PenCoreRes.sln  PenCoreRes.vcxproj  Progress.avi  Thumbs.db  resource.h
src/SeLow/: SeLow.c  SeLow.h  SeLow.rc  SeLow.vcproj  SeLowCommon.h
src/See/: DEBUG.H  Openclos.c  Packet.c  Packet.h  Packet32.h  Read.c  See.rc  See.vcproj  Write.c  bucket_lookup.c  bucket_lookup.h  count_packets.c  count_packets.h  dagc.h  dump.c  functions.c  functions.h  jitter.c  jitter.h  memory_t.h  normal_lookup.c  normal_lookup.h  resource.h  resource1.h  tcp_session.c  time_calls.h  tme.c  tme.h  valid_insns.h  win_bpf.h  win_bpf_filter.c  win_bpf_filter_init.c  win_bpf_filter_init.h
src/SeeDll/: AdInfo.c  Packet32.c  Packet32.h  SeeDll.rc  SeeDll.vcproj  See_Win32.def  See_x64.def  dagc.h  resource.h
src/VGate/: VGate.c  VGate.h  VGate.rc  VGate.vcproj  VGateCommon.h  VGate_Win32.def  VGate_x64.def  resource.h
src/Wfp/: Wfp.c  Wfp.h  Wfp.rc  Wfp.vcproj  WfpInner.h  resource1.h
src/hamcorebuilder/: CMakeLists.txt  FileSystem.c  FileSystem.h  Makefile.am  hamcorebuilder.c  main.c
src/libsoftether/: Makefile.am
src/makefiles/: freebsd_32bit.mak  freebsd_32bit_nobits.mak  freebsd_64bit.mak  freebsd_64bit_nobits.mak  linux_32bit.mak  linux_32bit_nobits.mak  linux_64bit.mak  linux_64bit_nobits.mak  macos_32bit.mak  macos_32bit_nobits.mak  macos_64bit.mak  macos_64bit_nobits.mak  openbsd_32bit.mak  openbsd_32bit_nobits.mak  openbsd_64bit.mak  openbsd_64bit_nobits.mak  solaris_32bit.mak  solaris_32bit_nobits.mak  solaris_64bit.mak  solaris_64bit_nobits.mak
src/softetherd/: Makefile.am  softetherd.c
src/vpn16/: Resource.h  Vpn16.def  Vpn16.mak  Vpn16.rc  vpn16.c  vpn16.h
src/vpnbrand/: resource.h  vpnbrand.c  vpnbrand.h  vpnbrand.rc  vpnbrand.vcproj
src/vpnbridge/: CMakeLists.txt  Makefile.am  resource.h  vpnbridge.c  vpnbridge.rc  vpnbridge.vcproj
src/vpnclient/: CMakeLists.txt  Makefile.am  resource.h  vpnclient.rc  vpnclient.vcproj  vpncsvc.c  vpncsvc.h
src/vpncmd/: CMakeLists.txt  Makefile.am  resource.h  vpncmd.c  vpncmd.rc  vpncmd.vcproj
src/vpncmdsys/: resource.h  vpncmdsys.c  vpncmdsys.h  vpncmdsys.rc  vpncmdsys.vcproj
src/vpncmgr/: CMakeLists.txt  resource.h  vpncmgr.c  vpncmgr.rc  vpncmgr.vcproj
src/vpndrvinst/: CMakeLists.txt  Device.c  Device.h  Dialog.c  Dialog.h  Driver.c  Driver.h  Str.c  Str.h  main.c  resource.h  vpndrvinst.c  vpndrvinst.h  vpndrvinst.rc  vpndrvinst.vcproj
src/vpninstall/: resource.h  vpninstall.c  vpninstall.h  vpninstall.rc  vpninstall.vcproj
src/vpnserver/: CMakeLists.txt  Makefile.am  resource.h  vpnserver.c  vpnserver.rc  vpnserver.vcproj
src/vpnsetup/: CMakeLists.txt  resource.h  vpnsetup.c  vpnsetup.rc  vpnsetup.vcproj
src/vpnsmgr/: CMakeLists.txt  resource.h  vpnsmgr.c  vpnsmgr.rc  vpnsmgr.vcproj
src/vpntest/: CMakeLists.txt  resource.h  vpntest.c  vpntest.rc  vpntest.vcproj
src/vpnweb/: VpnWebControl.cpp  VpnWebControl.h  VpnWebControl.rgs  dlldata.c  resource.h  stdafx.h  vpnweb.cpp  vpnweb.def  vpnweb.h  vpnweb.idl  vpnweb.rc  vpnweb.rgs  vpnweb.vcproj  vpnweb_i.c  vpnweb_p.c  vpnwebdlg.c  vpnwebdlg.h  vpnwebdlg_inner.h
(+339 files in other folders)
