#  Copyright 2014 Darik Horn <dajhorn@vanadac.com>
#
#  This file is part of SoftEther.
#
#  SoftEther is free software: you can redistribute it and/or modify it under
#  the terms of the GNU General Public License as published by the Free 
#  Software Foundation, either version 2 of the License, or (at your option)
#  any later version.
#
#  SoftEther is distributed in the hope that it will be useful, but WITHOUT ANY
#  WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
#  FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
#  details.
#
#  You should have received a copy of the GNU General Public License along with
#  SoftEther.  If not, see <http://www.gnu.org/licenses/>.


include $(top_srcdir)/autotools/softether.am

noinst_LTLIBRARIES = libcedar.la

libcedar_la_SOURCES = \
	Account.c \
	Admin.c \
	AzureClient.c \
	AzureServer.c \
	Bridge.c \
	BridgeUnix.c \
	BridgeWin32.c \
	Cedar.c \
	CedarPch.c \
	Client.c \
	CM.c \
	Command.c \
	Connection.c \
	Console.c \
	Database.c \
	DDNS.c \
	EM.c \
	EtherLog.c \
	Hub.c \
	Interop_OpenVPN.c \
	Interop_SSTP.c \
	IPsec.c \
	IPsec_EtherIP.c \
	IPsec_IKE.c \
	IPsec_IkePacket.c \
	IPsec_IPC.c \
	IPsec_L2TP.c \
	IPsec_PPP.c \
	IPsec_Win7.c \
	Layer3.c \
	Link.c \
	Listener.c \
	Logging.c \
	Nat.c \
	NativeStack.c \
	NM.c \
	NullLan.c \
	Protocol.c \
	Radius.c \
	Remote.c \
	Sam.c \
	SecureInfo.c \
	SecureNAT.c \
	SeLowUser.c \
	Server.c \
	Session.c \
	SM.c \
	SW.c \
	UdpAccel.c \
	UT.c \
	VG.c \
	Virtual.c \
	VLan.c \
	VLanUnix.c \
	VLanWin32.c \
	WaterMark.c \
	WebUI.c \
	WinUi.c \
	Wpc.c
